VerticalWindow to be fixed
creer un dossier "tempConcours" a la racine de l'ordi, pas reussi a
utiliser les chemin relatifs :p

--- a/Archip3l/Archip3l.csproj
+++ b/Archip3l/Archip3l.csproj
@@ -114,6 +114,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="VerticalWindow.xaml.cs">
+      <DependentUpon>VerticalWindow.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.xaml.cs">
@@ -149,6 +152,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VerticalWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
