Separation of the main windows of the game

--- a/VerticalArchip3l/VerticalArchip3l.csproj
+++ b/VerticalArchip3l/VerticalArchip3l.csproj
@@ -73,8 +73,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Bonus.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GameWindow.cs" />
+    <Compile Include="PlayingGameWindow.cs" />
+    <Compile Include="ResultWindow.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="Trophy.cs" />
+    <Compile Include="WelcomeWindow.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
