--- a/VerticalArchip3l/VerticalArchip3l.csproj
+++ b/VerticalArchip3l/VerticalArchip3l.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GameWindow.cs" />
     <Compile Include="PlayingGameWindow.cs" />
     <Compile Include="ResultWindow.cs" />
+    <Compile Include="ScoreManager.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="Trophy.cs" />
     <Compile Include="WelcomeWindow.cs" />
