--- a/SofthinkCoreShowCase/packages.config
+++ b/SofthinkCoreShowCase/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.2454.1344" targetFramework="net45" />
-  <package id="cef.redist.x86" version="3.2454.1344" targetFramework="net45" />
-  <package id="CefSharp.Common" version="45.0.0" targetFramework="net45" />
-  <package id="CefSharp.Wpf" version="45.0.0" targetFramework="net45" />
+  <package id="cef.redist.x64" version="3.2526.1362" targetFramework="net45" />
+  <package id="cef.redist.x86" version="3.2526.1362" targetFramework="net45" />
+  <package id="CefSharp.Common" version="47.0.2" targetFramework="net45" />
+  <package id="CefSharp.Wpf" version="47.0.2" targetFramework="net45" />
+  <package id="FarseerPhysics" version="3.5.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="NLog" version="4.2.3" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net45" />
 </packages>
