--- a/VerticalArchip3l/VerticalArchip3l.csproj
+++ b/VerticalArchip3l/VerticalArchip3l.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Game.cs" />
     <Compile Include="GameWindow.cs" />
     <Compile Include="ActionHistoryManager.cs" />
+    <Compile Include="Island.cs" />
+    <Compile Include="IslandControls.cs" />
     <Compile Include="PlayingGameWindow.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="ResourceManager.cs" />
