--- a/VerticalArchip3l/VerticalArchip3l.csproj
+++ b/VerticalArchip3l/VerticalArchip3l.csproj
@@ -92,8 +92,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Bonus.cs" />
     <Compile Include="Action.cs" />
+    <Compile Include="Bonus.cs" />
+    <Compile Include="ActionManager.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Enumeration.cs" />
     <Compile Include="Game.cs" />
