IslandConstrols class updated

--- a/VerticalArchip3l/VerticalArchip3l.csproj
+++ b/VerticalArchip3l/VerticalArchip3l.csproj
@@ -103,7 +103,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="GameWindow.cs" />
     <Compile Include="ActionHistoryManager.cs" />
-    <Compile Include="HeritedExistingClass.cs" />
+    <Compile Include="InheritedExistingClass.cs" />
     <Compile Include="Island.cs" />
     <Compile Include="IslandControls.cs" />
     <Compile Include="Disturbance.cs" />
